# Micropipette

./: CMakeLists.txt  Cell_Geom.part0.exelem  Cell_Geom.part0.exnode  Micropipette.part0.exelem  Micropipette.part0.exnode  OpenCMISS.cmake  ellipse.1.ele  ellipse.1.ele.eps  ellipse.1.ele.ps  ellipse.1.node  ellipse.1.poly  ellipse.poly  inputs.txt  run2.out  runnew1.out  runnew2.out  runnew3.out  runnew4.out  visualise.com
src/: Micropipette.f90  opencmiss_setup_routines.f90
